app/src/main/java/com/example/aedificantes_calculateur_se_sol/Error/VerificateObserver.java
package com.example.aedificantes_calculateur_se_sol.Error;

import java.util.List;

public interface VerificateObserver {

    public boolean isFill();
}
